Fixed nav bar behind content

--- a/src/Webdevelopment-Project/wwwroot/css/site.css
+++ b/src/Webdevelopment-Project/wwwroot/css/site.css
@@ -117,6 +117,7 @@ a.navbar-brand {
 
 .show{
   margin-bottom: 120px;
+  z-index: 5000;
 }
 
 .nav-link:hover{
